--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/GregorySaison/Pokedex#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "sequelize": "^6.19.0"
   },
   "devDependencies": {
     "node-dev": "^7.4.3"
